--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Game 9:16</title>
+    <title>3D Boxes with Timer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div id="timer-container">
             <div id="timer-bar-left"></div>
             <div id="timer-bar-right"></div>
-            
+            <div id="diamond"></div> <!-- Diamond inside the timer container -->
         </div>
         <div id="countdown-display"></div>
         <div class="images">
