--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div id="diamond"></div>
         </div>
         <div class="boxes">
-            <div class="box">Box 1</div>
-            <div class="box">Box 2</div>
-            <div class="box">Box 3</div>
+            <div class="box">box1</div>
+            <div class="box">box2</div>
+            <div class="box">box3</div>
         </div>
         <div class="images">
             <div class="image-container">
