--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div id="timer-container">
             <div id="timer-bar-left"></div>
             <div id="timer-bar-right"></div>
+            <div id="diamond"></div>
         </div>
         <div class="boxes">
-            <div class="box">box1</div>
-            <div class="box">box2</div>
-            <div class="box">box3</div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </div>
         <div class="images">
             <div class="image-container">
